[package]
name = "certbot-alfahosting"
version = "1.0.2"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]
edition = "2021"
build="cargo-scripts/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
native-tls = "0.2.10"
imap = "1.0.2"
regex = "1.6.0"
headless_chrome = "1.0.5"
acme-lib = "0.8.2"
toml = "0.7.2"
serde = "1.0.144"
